# minesweeper

./: .gitignore  CMakeLists.txt  Makefile  makefile
include/: buffer.h  color.h  minefield.h  shader.h  texture.h  tile.h  vec2.h  window.h
include/glad/: glad.h
res/: frag.glsl  vert.glsl
src/: ball.cpp  ball.h  brick.cpp  brick.h  buffer.c  buffer.cpp  buffer.h  game.cpp  game.h  glad.c  main.c  main.cpp  minefield.c  minefield.cpp  minefield.h  paddle.cpp  paddle.h  rect.h  shader.c  texture.c  tile.c  util.c  vec2.c  vec2.cpp  vec2.h  window.c
